# ants_simulator

./: CMakeLists.txt  README.md  ant.py  colider.py  core.py  environment.py  main.py  parameters.py  test.py  vector.py
cpp/: CMakeLists.txt  Colony.hpp  main.cpp  test.hpp
python/: ant.py  environment.py  main.py  parameters.py  test.py  vector.py
src/: Ant.hpp  Chunk.hpp  Entity.hpp  Environment.hpp  Food.hpp  Input.hpp  Nest.hpp  Pheromone.hpp  Rock.hpp  collisions.hpp  config.hpp  info.cpp  main.cpp  template.hpp
src/ant/: Ant.hpp  ant_collider.hpp  ant_updater.hpp
src/components/: CircleShape.hpp  Component.hpp  Movement.hpp  PhysicBody.hpp  Position.hpp  Shape.hpp  Transform.hpp
src/math/: Vectors.hpp
src/systems/: Collision.hpp  Draw.hpp  Gravity.hpp  Movement.hpp  System.hpp  WallsCollision.hpp
